@@ -1,3 +1,4 @@
+2022-11-15: [FEATURE] Add `ExtendedPopupMixin` to simplify adding popups to widgets
 2022-11-13: [FEATURE] Add ability to update popup control values
 2022-11-12: [BUGFIX] Fix menu bug in `GlobalMenu`
 2022-11-12: [FEATURE] `PopupImage` can display an alternative image as a highlight
